--- a/src/client/index.css
+++ b/src/client/index.css
@@ -96,7 +96,7 @@
   }
 
   .word-card-inner {
-    @apply relative w-full h-full transition-transform duration-500;
+    @apply relative w-full h-full transition-transform duration-500 pointer-events-none;
     transform-style: preserve-3d;
   }
 
